--- a/dev/scss/blocks/_main.scss
+++ b/dev/scss/blocks/_main.scss
@@ -86,6 +86,7 @@
   &__validation {
     text-align: center;
     color: red;
+    height: 30px;
   }
 
   &__task {
@@ -114,12 +115,12 @@
     & span:nth-child(2) {
       justify-self: start;
       align-self: center;
-      padding-left: 50px;
+      padding-left: 20px;
     }
     & span:nth-child(3) {
       justify-self: end;
       align-self: center;
-      padding-right: 50px;
+      padding-right: 20px;
     }
     & span:last-child {
       justify-self: center;
