--- a/dev/scss/blocks/_main.scss
+++ b/dev/scss/blocks/_main.scss
@@ -1,10 +1,12 @@
 .main {
 
   &__form {
-    text-align: center;
+    display: grid;
+    justify-items: center;
 
     & form {
-      width: 60%;
+      width: 90%;
+      margin: 0;
       display: grid;
       grid-template-columns: 1fr 40px;
       grid-template-rows: 1fr 1fr;
@@ -77,6 +79,7 @@
     & button {
       height: 100%;
       border-radius: 3px;
+      background-color: $text-color2;
     }
     & button:hover {
       background-color: $background-color2;
@@ -96,7 +99,7 @@
   }
 
   &__list {
-    width: 60%;
+    width: 90%;
     justify-self: center;
   }
 
@@ -115,12 +118,14 @@
     & span:nth-child(2) {
       justify-self: start;
       align-self: center;
-      padding-left: 20px;
+      padding-left: 5px;
+      font-size: .8rem;
     }
     & span:nth-child(3) {
       justify-self: end;
       align-self: center;
-      padding-right: 20px;
+      padding-right: 5px;
+      font-size: .8rem;
     }
     & span:last-child {
       justify-self: center;
@@ -144,7 +149,24 @@
 
     &__form {
       & form {
+        width: 60%;
         margin: 0 20%;
+      }
+    }
+
+    &__list {
+      width: 60%;
+    }
+
+    &__item {
+
+      & span:nth-child(2) {
+        padding-left: 20px;
+        font-size: 1rem;
+      }
+      & span:nth-child(3) {
+        padding-right: 20px;
+        font-size: 1rem;
       }
     }
   }
