--- a/dev/scss/blocks/_main.scss
+++ b/dev/scss/blocks/_main.scss
@@ -17,7 +17,7 @@
   &__input1 {
     grid-column: 1 / span 1;
     grid-row: 1 / span 1;
-    padding-left: 8px;
+    margin-right: 10px;
 
     & input {
       width: 100%;
@@ -29,6 +29,7 @@
     grid-row: 2 / span 1;
     display: grid;
     grid-template-columns: repeat(3, 50px) 1fr;
+    margin-right: 10px;
 
     input[type="radio"] {
       display: none;
@@ -78,6 +79,7 @@
 
     & button {
       height: 100%;
+      width: 100%;
       border-radius: 3px;
       background-color: $text-color2;
     }
