--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -123,11 +123,11 @@ body { display: grid; grid-template-columns: 1fr; grid-template-rows: 100px 1fr 
 
 .main__form form { width: 90%; margin: 0; display: grid; grid-template-columns: 1fr 40px; grid-template-rows: 1fr 1fr; justify-items: stretch; }
 
-.main__input1 { grid-column: 1 / span 1; grid-row: 1 / span 1; padding-left: 8px; }
+.main__input1 { grid-column: 1 / span 1; grid-row: 1 / span 1; margin-right: 10px; }
 
 .main__input1 input { width: 100%; border-radius: 3px; }
 
-.main__input2 { grid-column: 1 / span 1; grid-row: 2 / span 1; display: grid; grid-template-columns: repeat(3, 50px) 1fr; }
+.main__input2 { grid-column: 1 / span 1; grid-row: 2 / span 1; display: grid; grid-template-columns: repeat(3, 50px) 1fr; margin-right: 10px; }
 
 .main__input2 input[type="radio"] { display: none; }
 
@@ -147,7 +147,7 @@ body { display: grid; grid-template-columns: 1fr; grid-template-rows: 100px 1fr 
 
 .main__button { grid-column: 2 / span 1; grid-row: 1 / span 2; }
 
-.main__button button { height: 100%; border-radius: 3px; background-color: var(--text-color2); }
+.main__button button { height: 100%; width: 100%; border-radius: 3px; background-color: var(--text-color2); }
 
 .main__button button:hover { background-color: var(--background-color2); }
 
