--- a/dev/scss/blocks/_main.scss
+++ b/dev/scss/blocks/_main.scss
@@ -47,6 +47,7 @@
 
           img {
             opacity: 0;
+            margin-left: 6px;
             transition: all .3s ease;
           }
         }
