--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -133,7 +133,7 @@ body { display: grid; grid-template-columns: 1fr; grid-template-rows: 100px 1fr 
 
 .main__input2 input[type="radio"] + label span { display: inline-block; width: 35px; height: 35px; cursor: pointer; border-radius: 50%; border: 2px solid #FFFFFF; line-height: 35px; }
 
-.main__input2 input[type="radio"] + label span img { opacity: 0; transition: all .3s ease; }
+.main__input2 input[type="radio"] + label span img { opacity: 0; margin-left: 6px; transition: all .3s ease; }
 
 .main__input2 input[type="radio"]#red + label span { background-color: #e74c3c; }
 
